--- a/assets/scss/components/_abcompany.scss
+++ b/assets/scss/components/_abcompany.scss
@@ -3,21 +3,37 @@
         max-width: 1456px;
         margin-left: auto;
         margin-right: auto;
+        @include st {
+            max-width: 374px;
+        }
         &__title {
+            @include st {
+                font-size: 36px;
+            }
             font-size: 52px;
             font-weight: 400;
             color: var(--color-accent);
         }
         &__about {
             display: flex;
+            @include st {
+                flex-direction: column;
+            }
             .abtext {
                 &__title {
+                    @include st {
+                        font-size: 18px;
+                    }
                     font-size: 26px;
                     font-weight: 500;
                     color: var(--color-text);
 
                 }
                 &__subtitle {
+                    @include st {
+                        font-size: 14px;
+                        line-height: 20px;
+                    }
                     font-size: 16px;
                     font-weight: 400;
                     line-height: 22px;
