--- a/assets/scss/components/_contgen.scss
+++ b/assets/scss/components/_contgen.scss
@@ -5,6 +5,9 @@
     .cbot {
 
         height: 590px;    
+        @include st {
+            height: unset;
+        }
         position: relative;
         
         background-position: top;
@@ -13,6 +16,9 @@
             max-width: 1456px;
             margin-right: auto;
             margin-left: auto;
+            @include st {
+                max-width: 374px;
+            }
             &__text {
                 display: flex;
                 margin: auto;
@@ -48,6 +54,9 @@
                         // transform: translate(380px,-69px);
                         margin: 0px 0 0 0;
                         &__title {
+                            @include st {
+                                font-size: 34px;
+                            }
                             text-transform: uppercase;
                             font-size: 60px;
                             margin: 0;
@@ -81,6 +90,7 @@
                     }
             }
             .cbut {
+                @include st {}
                 display: flex;
                 margin-top: 90px;
                 padding-bottom: 20px;
@@ -96,6 +106,9 @@
                     }
                 }
                 &__social {
+                    @include st {
+                        display: none;
+                    }
                     gap: 60px;
                     display: flex;
                     margin-left: auto;
