--- a/assets/scss/components/_description.scss
+++ b/assets/scss/components/_description.scss
@@ -5,7 +5,16 @@
         margin-left: auto;
         margin-top: 140px;
         margin-bottom: 140px;
+        @include st {
+            max-width: 374px;
+        }
         &-title {
+            @include st {
+
+            }
+            @include st {
+                font-size: 36px;
+            }
             color: var(--color-accent);
             font-size: 52px;
             font-weight: 400;
@@ -17,6 +26,11 @@
             font-weight: 400;
             line-height: 33px;
             margin-left: 369px;
+            @include st {
+                margin-left: 0;
+                font-size: 18px;
+                line-height: 25px;
+            }
         }
 
 
