--- a/assets/scss/components/_general.scss
+++ b/assets/scss/components/_general.scss
@@ -11,7 +11,7 @@
     }
     .wbot {
 
-        height: 80vh;
+        // height: 80vh;
         @include fullhd {
             height: unset;
         }    
