--- a/assets/scss/components/_new.scss
+++ b/assets/scss/components/_new.scss
@@ -6,6 +6,10 @@
         margin-top: 140px;
         margin-bottom: 140px;
         @include st {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        @include st {
             max-width: 374px;
         }
         &__news {
@@ -32,13 +36,17 @@
                 &__image {
                     max-width: 349px;
                     max-height: 278px;
+                    @include st {
+                        max-height: unset;
+                        max-width: unset;
+                    }
                     &-picture {
                         max-width: 349px;
                         max-height: 278px;
                         object-fit: cover;
                         @include st {
                             width: 374px;
-                            
+                            height: 220px;
                         }
                     }
                 }
@@ -78,12 +86,21 @@
                     display: flex;
                     flex-direction: column;
                     &-title {
+                        @include st {
+                            font-size: 18px;
+                            font-weight: 600;
+                        }
                         font-size: 24px;
                         margin: 0;
                         font-weight: 500;
                         color: var(--color-text);
                     }
                     &-subtitle {
+                        @include st {
+                            height: 80px;
+                            text-overflow: ellipsis;
+
+                        }
                         margin-top: 40px;
                         font-size: 16px;
                         color: var(--color-text);
@@ -102,6 +119,9 @@
             }
 
             &-button {
+                @include st {
+                    display: none;
+                }
                 display: flex;
                 justify-content: center;
                 color: var(--color-text);
