--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -30,3 +30,6 @@
 @import "./components/contgen";
 @import "./components/contlinks";
 @import "./components/histmob";
+@import "./components/form";
+@import "./components/shortform";
+@import "./components/shortlyform";
