--- a/assets/scss/components/_aboutcompany.scss
+++ b/assets/scss/components/_aboutcompany.scss
@@ -34,16 +34,26 @@
             margin-right: auto;
             margin-left: auto;
             @include xxl{
-                max-width: calc(100vw - 20vw);
+                max-width: 820px;
+            }
+            @include lg {
+                max-width: 576px;
             }
             @include st {
                 max-width: 374px;
             }
             &__text {
+                
                 display: flex;
                 margin: auto;
                 top: -95px;
                 position: relative;
+                @include xxl {
+                    width: 820px;
+                }
+                @include lg {
+                    width: 576px;
+                }
                 @include st {
                     width: 414px;
                     top: -30px;
@@ -122,13 +132,18 @@
                 &__social {
                     gap: 60px;
                     display: flex;
-                    
+                    @include xxl {
+                        display: none;
+                    }
                     &-links {
                         font-size: 16px;
                         font-weight: 600;
                     }
                 }
                 &__messenger {
+                    @include xxl {
+                        display: none;
+                    }
                     background-color: #012B56;
                     border-radius: 50px;
                     padding: 10px;
