--- a/assets/scss/components/_contgen.scss
+++ b/assets/scss/components/_contgen.scss
@@ -16,6 +16,12 @@
             max-width: 1456px;
             margin-right: auto;
             margin-left: auto;
+            @include xxl {
+                max-width: 820px;
+            }
+            @include lg {
+                max-width: 576px;
+            }
             @include st {
                 max-width: 374px;
             }
@@ -106,6 +112,9 @@
                     }
                 }
                 &__social {
+                    @include xxl {
+                        display: none;
+                    }
                     @include st {
                         display: none;
                     }
@@ -120,6 +129,12 @@
                     }
                 }
                 &__messenger {
+                    @include xxl {
+                        display: none;
+                    }
+                    @include st {
+                        display: none;
+                    }
                     background-color: #012B56;
                     border-radius: 50px;
                     padding: 10px;
