--- a/assets/scss/components/_contlinks.scss
+++ b/assets/scss/components/_contlinks.scss
@@ -4,6 +4,12 @@
     max-width: 1456px;
     display: flex;
     justify-content: space-between;
+    @include xxl {
+        max-width: 820px;
+    }
+    @include lg {
+        max-width: 576px;
+    }
     @include st {
         flex-direction: column;
         gap: 30px;
@@ -53,6 +59,9 @@
     }
     .cright {
         margin-right: 246px;
+        @include xxl {
+            margin-right: 0px;
+        }
         @include st {
             margin: 0;
         }
