--- a/assets/scss/components/_objectives.scss
+++ b/assets/scss/components/_objectives.scss
@@ -5,6 +5,12 @@
         margin-right: auto;
         margin-top: 140px;
         margin-bottom: 140px;
+        @include xxl {
+            max-width: 820px;
+        }
+        @include lg {
+            max-width: 576px;
+        }
         @include st {
             max-width: 374px;
         }
@@ -13,6 +19,9 @@
             align-items: center;
             margin-left: 846px;
             position: relative;
+            @include xxl {
+                margin-left: 0;
+            }
             @include st {
                 margin-left: 0;
             }
