--- a/assets/scss/components/_offer.scss
+++ b/assets/scss/components/_offer.scss
@@ -5,6 +5,12 @@
         margin-right: auto;
         margin-top: 140px;
         margin-bottom: 140px;
+        @include xxl {
+            max-width: 820px;
+        }
+        @include lg {
+            max-width: 576px;
+        }
         @include st {
             max-width: 374px;
         }
@@ -20,6 +26,9 @@
             display: grid;
             grid-template-columns: repeat(3,1fr);
             grid-template-rows: repeat(3,1fr);
+            @include xxl {
+                grid-template-columns: repeat(1,1fr);
+            }
             @include st {
                 display: flex;
                 flex-direction: column;
