--- a/assets/scss/components/_vision.scss
+++ b/assets/scss/components/_vision.scss
@@ -3,7 +3,13 @@
     .vcont {
         max-width: 1456px;
         margin-left: auto;
-        margin-right: auto;  
+        margin-right: auto;
+        @include xxl {
+            max-width: 820px;
+        }  
+        @include lg {
+            max-width: 576px;
+        }
         @include st {
             max-width: 374px;
         }  
@@ -17,6 +23,9 @@
         }
         &__text {
             margin-left: 355px;
+            @include xxl {
+                margin-left: 0;
+            }
             @include st {
                 margin-left: 0;
 
@@ -48,20 +57,30 @@
                 gap: 16px;
              }
             &-large {
+                @include xxl {
+                    height: 300px;
+                }
                 @include st {
                     width: 312px;
+                    height: unset;
                 }
                 
             }
             &-small {
-                
+                @include xxl {
+                    height: 300px;
+                }
                 @include st {
+                    height: unset;
                     width: 156px;
                     margin-left: auto;
                 }
             }
         }
         &__target {
+            @include xxl {
+                margin-left: 0;
+            }
             @include st {
                 margin-left: 0;
                 
